[tool.poetry]
name = "Papermerge OIDC App"
version = "0.1.0"
description = "Magically transforms Papermerge into OIDC client"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
python-jose = "^3.3.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pydantic = "^2.7.1"
redis = "^5.0.4"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[tool.taskipy.tasks]
server = "uvicorn oidc_app.main:app --port 8010 --log-level debug"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
